--- a/src/Components/MovieCard/Card.css
+++ b/src/Components/MovieCard/Card.css
@@ -3,4 +3,9 @@
     height:400px;
     border: 1px solid var(--color-primary-300);
     border-radius: 20px;
+    overflow: hidden;
+}
+
+.cardImg{
+    height: 100%;
 }
