--- a/src/Components/MovieCard/Card.css
+++ b/src/Components/MovieCard/Card.css
@@ -1,5 +1,5 @@
 .card{
-    width:250px;
+    min-width:250px;
     height:400px;
     border: 1px solid var(--color-primary-300);
     border-radius: 20px;
@@ -8,4 +8,36 @@
 
 .cardImg{
     height: 100%;
+    transition: all 1s ease;
+}
+
+.cardImg:hover{
+    transform: scale(1.2);
+    transition: all 1s ease;
+}
+
+.movie-details{
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+    width: 100%;
+    height: 150px;
+    padding: 20px;
+    background: linear-gradient(0deg, black,hsla(0, 0%, 0%, 0.824), hsla(0, 0%, 0%, 0.324), transparent);
+    margin: 0 auto;
+    color: white;
+    position: relative;
+    transition: all 1s ease;
+}
+.cardImg:hover~.movie-details{
+    transform: translateY(-150px);
+    transition: all .5s ease;
+}
+
+.title{
+    font-size: 1rem;
+}
+.date-rating{
+    display: flex;
+    justify-content: space-between;
 }
