--- a/src/Components/MovieCard/Card.css
+++ b/src/Components/MovieCard/Card.css
@@ -1,5 +1,6 @@
 .card{
-    min-width:250px;
+    width: 265px;
+    max-width:265px;
     height:400px;
     border: 1px solid var(--color-primary-300);
     border-radius: 20px;
