--- a/src/Components/MovieLists/List.css
+++ b/src/Components/MovieLists/List.css
@@ -1,3 +1,18 @@
+.movie-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:50px;
+}
+
 .movie-list{
-    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.list-heading{
+    margin-bottom: 50px;
+    color: white;
 }
