--- a/src/Components/Pages/MovieDetails/MovieDetails.module.css
+++ b/src/Components/Pages/MovieDetails/MovieDetails.module.css
@@ -6,20 +6,70 @@
 
 .movieBanner{
     height: 90vh;
-    position: absolute;
-    right: 0;
+    width: 100%;
+    /* position: absolute; */
+    /* right: 0; */
 }
 .details{
     color: #fff;
 }
+.movie_details{
+    width: 100%;
+    padding: 50px;
+    height: 400px;
+    text-align: left;
+    position: absolute;
+    bottom: 0px;
+    color: white;
+    background: linear-gradient(0deg, var(--color-primary-900), #060e3bcf, transparent);
+}
 
+.posterTitle{
+    font-size: 4rem;
+}
+
+.featureContainer{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 18px 0;
+}
+
+.movieFeatureHeading{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 0 15px 0 0;
+}
+.movieFeature{ /*button*/
+    border: 1px solid var(--color-primary-300);
+    font-size: 1.2rem;
+    font-weight: 300;
+    border-radius: 20px;
+    padding: 5px 25px;
+    margin: 0 15px 0 0;
+}
+
+.movie_rating{
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    font-weight: 600;
+}
+
+.about{
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    margin: 0 50px;
+}
+
+/*styling movie card */
 .poster{
     width: 353px;
     height: 507px;
-    position: absolute;
+    /* position: absolute;
     left: 5%;
-    top: 50%;
-    transform: translate(0px, -45%);
+    top: 50%; */
+    /* transform: translate(0px, -45%); */
     /* margin: 50px; */
     border: 1px solid var(--color-primary-300);
     border-radius: 20px;
