--- a/src/Components/Pages/MovieDetails/MovieDetails.module.css
+++ b/src/Components/Pages/MovieDetails/MovieDetails.module.css
@@ -10,13 +10,13 @@
     /* position: absolute; */
     /* right: 0; */
 }
-.details{
+.movieDetailsContainer{
     color: #fff;
 }
 .movie_details{
     width: 100%;
     padding: 50px;
-    height: 400px;
+    height: 350px;
     text-align: left;
     position: absolute;
     bottom: 0px;
@@ -26,6 +26,11 @@
 
 .posterTitle{
     font-size: 4rem;
+    line-height: 4rem;
+}
+.tagline{
+    font-size: 1.5rem;
+    font-weight: 300;
 }
 
 .featureContainer{
@@ -59,6 +64,7 @@
     height: 90vh;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin: 0 50px;
 }
 
@@ -75,4 +81,46 @@
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
     z-index: 2;
+}
+
+.aboutMovie{
+    width: 70%;
+    height: 70%;
+}
+
+.description{
+    font-size: 1.2rem;
+    font-family: var(--normal-font);
+}
+
+.detailsTable{
+    width: 100%;
+    /* border: 1px solid var(--color-primary-300);
+    border-radius: 20px; */
+    padding: 20px 0;
+    margin: 20px 0;
+}
+
+table{
+    width: 100%;
+    /* border-collapse: collapse;  */
+}
+
+tr{
+    height: 45px ;
+}
+.tableHeading{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 0 0 10px 0;
+    color: var(--color-primary-300);
+}
+
+.tableData{
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(#bbbbbb);
+    font-family: var(--normal-font);
+    /* margin: 0 0 10px 0; */
+    width: 60%;
 }
