--- a/src/Components/Pages/MovieDetails/MovieDetails.module.css
+++ b/src/Components/Pages/MovieDetails/MovieDetails.module.css
@@ -85,7 +85,13 @@
 
 .aboutMovie{
     width: 70%;
-    height: 70%;
+    /* height: 70%; */
+}
+
+.overviewHeading>h1{
+    border-left: 5px solid var(--color-primary-300);
+    padding-left: 20px;
+    margin-bottom: 20px;
 }
 
 .description{
@@ -98,7 +104,6 @@
     /* border: 1px solid var(--color-primary-300);
     border-radius: 20px; */
     padding: 20px 0;
-    margin: 20px 0;
 }
 
 table{
